# quant-labs

./: .gitignore  README.md  pyproject.toml
data/raw/: benchmark_QQQ.csv  precios_historicos.parquet
data_cache/: benchmark_QQQ.csv
notebooks/01_backtesting/: 01_strategy.ipynb
notebooks/research/backtesting_2024_2025/: backtest.ipynb
notebooks/research/teoria_markowitz/: README.md  sandbox.ipynb
research/01_teoria_markowitz/: sandbox.ipynb
research/02_backtesting_2024_2025/: README.md  backtest.ipynb
src/quant_utils/: README.md  __init__.py  brokers.py  data_downloader.py  data_manager.py  optimization.py  plotting.py  report_generator.py  reports.py  stats.py
src/quant_utils/reports/: plotting.py  report_generator.py  styles.py
src/quant_utils/templates/: report_template.html
tests/: test_optimization.py  test_pipeline.py  test_stats.py
