[project]
name = "quant-labs"
version = "0.1.0"
description = "Librería y entorno de investigación de finanzas cuantitativas."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "yfinance>=0.2.50",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jinja2>=3.1.6",
    "weasyprint>=69.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quant_utils"]
